@@ -15,6 +15,9 @@
 #      default.
 #
 # $Log$
+# Revision 1.4  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.3  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -62,7 +65,7 @@ if($ARGV[0] && $ARGV[0] eq "config")
   {
     print "graph_title Netstat\n";
     print "graph_args -l 0 --base 1000\n";
-    print "graph_vlabel requests connections per ${graph_period}\n";
+    print "graph_vlabel requests connections per \${graph_period}\n";
     print "requests.label requests\n";
     print "requests.type COUNTER\n";
     print "requests.max 50000\n";
