@@ -26,6 +26,9 @@
 #		chance that an update will occur.
 #
 # $Log$
+# Revision 1.4  2004/12/10 18:51:44  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.3  2004/11/26 15:16:42  jimmyo
 # Force plugin linux/apt to use C locale (SF#1072470).
 #
@@ -55,6 +58,7 @@
 use strict;
 
 $ENV{'LANG'}="C";
+$ENV{'LC_ALL'}="C";
 my $statefile = "@@PLUGSTATE@@/plugin-apt.state";
 
 sub update_state() {
