@@ -1,4 +1,4 @@
-#!/usr/bin/perl -w
+#!@@PERL@@ -w
 #
 # Plugin to monitor packages that should be installed on systems using
 # apt-get (mostly Debian, but also RedHat).
@@ -30,6 +30,9 @@
 #		chance that an update will occur.
 #
 # $Log$
+# Revision 1.2  2004/12/10 18:51:44  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.1  2004/10/19 16:57:15  jimmyo
 # Added new plugin linux/apt_all, contributed by xavier.
 #
@@ -53,6 +56,9 @@
 # Now for the real work...
 
 use strict;
+
+$ENV{'LANG'}="C";
+$ENV{'LC_ALL'}="C";
 
 my $statefile = "/var/lib/munin/plugin-state/plugin-apt.state";
 my @releases = ("testing","unstable");
