@@ -22,6 +22,9 @@
 # 	suggest  (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.7  2004/12/10 18:51:44  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.6  2004/12/10 11:48:42  jimmyo
 # linux/cps_ plugin now groks high numbers.
 #
@@ -149,7 +152,7 @@ sub config
 	print "graph_title Loadbalanced ",($vip?$vip:"*"),"->",$port," connections\n";
 	print "graph_args -l 0\n";
 	print "graph_total total\n";
-	print "graph_vlabel connections / ${graph_period}\n";
+	print "graph_vlabel connections / \${graph_period}\n";
 	print "graph_category network\n";
 	my $first=1;
 	$vip = $vip || "";
