@@ -12,6 +12,9 @@
 # Config variables:
 #
 # $Log$
+# Revision 1.8  2004/12/10 18:51:44  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.7  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -56,7 +59,7 @@ if ( $ARGV[0] ) {
 	print <<EOM;
 graph_title Firewall Throughput
 graph_args --base 1000 -l 0
-graph_vlabel Packets/${graph_period}
+graph_vlabel Packets/\${graph_period}
 graph_category network
 received.label Received
 received.draw AREA
