@@ -3,6 +3,9 @@
 # Plugin to monitor individual interrupts
 #
 # $Log$
+# Revision 1.7  2004/12/10 18:51:44  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.6  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -82,7 +85,7 @@ if (defined $ARGV[0] && $ARGV[0] eq 'config') {
       defined($cpu) ? " on CPU $cpu\n" : "\n";
     print <<EOM;
 graph_args --base 1000 -l 0;
-graph_vlabel interrupts / ${graph_period}
+graph_vlabel interrupts / \${graph_period}
 graph_category system
 EOM
     print join(' ', 'graph_order', map {"i" . $_->{irq}} @irqs), "\n";
