@@ -25,6 +25,9 @@
 # existing for examples.
 #
 # $Log$
+# Revision 1.7  2004/12/10 18:51:44  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.6  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -189,7 +192,7 @@ if ($ARGV[0] and $ARGV[0] eq "config")
 	print "graph_title VLAN $INTERFACE internet usage\n";
 	print "graph_total total\n";
 	print "graph_args --base 1000\n";
-	print "graph_vlabel bits per ${graph_period} in (-) / out (+)\n";
+	print "graph_vlabel bits per \${graph_period} in (-) / out (+)\n";
 	print "graph_category network\n";
 	print @out;
 	exit 0;
