@@ -17,6 +17,9 @@
 #	logfile      - What file to read in logdir
 #
 # $Log$
+# Revision 1.4  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.3  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -122,7 +125,7 @@ $pos = $startsize;
 if($ARGV[0] and $ARGV[0] eq "config") {
     print "graph_title Courier MTA mail throughput\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel mails / ${graph_period}\n";
+    print "graph_vlabel mails / \${graph_period}\n";
     print "graph_scale  no\n";
     print "graph_total  Total\n";
     print "delivered.label delivered\n";
