@@ -16,6 +16,9 @@
 #       maxlabel     - Maximum printers to plot
 #
 # $Log$
+# Revision 1.5  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.4  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -125,7 +128,7 @@ if($ARGV[0] and $ARGV[0] eq "config") {
     print "host_name $ENV{FQDN}\n";
     print "graph_title CUPS pages printed\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel pages/${graph_period}\n";
+    print "graph_vlabel pages/\${graph_period}\n";
     print "graph_order ".join(" ",sort(keys(%printers)))."\n";
     foreach my $printer (sort(keys %printers)) {
 	print "$printer.label $printer\n";
