@@ -15,6 +15,9 @@
 # 	exim         - Where's exim?
 #
 # $Log$
+# Revision 1.7  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.6  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -161,7 +164,7 @@ if ( $ARGV[0] and $ARGV[0] eq "config" )
 {
     print "graph_title Exim mail throughput\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel mails/${graph_period}\n";
+    print "graph_vlabel mails/\${graph_period}\n";
     print "graph_scale  no\n";
     print "graph_category exim\n";
     print "received.label received\n";
