@@ -36,6 +36,9 @@
 # TODO: Handle rotated logs
 #
 # $Log$
+# Revision 1.4  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.3  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -79,7 +82,7 @@ if ($ARGV[0] and $ARGV[0] eq 'config') {
     my $title = $ENV{title} || "Entries in $logfile";
     print "graph_title $title\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel entries / ${graph_period}\n";
+    print "graph_vlabel entries / \${graph_period}\n";
     print "graph_category other\n";
     for my $key (keys %regex) {
 	print "$key.label $regex{$key}{'label'}\n";
