@@ -5,6 +5,9 @@
 # Copyright 2003-2004 - Per Andreas Buer
 #
 # $Log$
+# Revision 1.11  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.10  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -107,7 +110,7 @@ sub print_config {
 
     print("graph_title MySQL queries
 graph_args --base 1000
-graph_vlabel queries / ${graph_period}
+graph_vlabel queries / \${graph_period}
 graph_category mysql
 graph_total total\n");
 
