@@ -1,6 +1,9 @@
 #!@@PERL@@
 
 # $Log$
+# Revision 1.5  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.4  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -51,7 +54,7 @@ if ( $ARGV[0] and $ARGV[0] eq "config" )
 {
 	print "graph_title POP logon stats\n";
 	print "graph_args --base 1000\n";
-	print "graph_vlabel logons / ${graph_period}\n";
+	print "graph_vlabel logons / \${graph_period}\n";
 	print "logon.label logons\n";
 	print "logon.type DERIVE\n";
 	print "logon.min 0\n";
