@@ -15,6 +15,9 @@
 #	logfile      - What file to read in logdir
 #
 # $Log$
+# Revision 1.6  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.5  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -152,7 +155,7 @@ if ( $ARGV[0] and $ARGV[0] eq "config" )
 {
     print "graph_title Postfix mail throughput\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel bytes / ${graph_period}\n";
+    print "graph_vlabel bytes / \${graph_period}\n";
     print "graph_scale  no\n";
     print "graph_category  postfix\n";
     print "volume.label throughput\n";
