@@ -18,6 +18,9 @@
 #
 #
 # $Log$
+# Revision 1.11  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.10  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -146,7 +149,7 @@ if ($ARGV[0] and $ARGV[0] eq "config")
 	print "graph_title FC $name traffic\n";
 	print "graph_order recv send\n";
 	print "graph_args --base 1000\n";
-	print "graph_vlabel bits in (-) / out (+) per ${graph_period}\n";
+	print "graph_vlabel bits in (-) / out (+) per \${graph_period}\n";
 	print "graph_category network\n";
 	print "graph_info This graph shows network usage for fibrechannel controllers.\n";
 	print "send.info Bits sent/received by this interface.\n";
