@@ -18,6 +18,9 @@
 #
 #
 # $Log$
+# Revision 1.11  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.10  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -140,7 +143,7 @@ if ($ARGV[0] and $ARGV[0] eq "config")
 	print "graph_title FC $name errors\n";
 	print "graph_order errs\n";
 	print "graph_args --base 1000\n";
-	print "graph_vlabel errors / ${graph_period}\n";
+	print "graph_vlabel errors / \${graph_period}\n";
 	print "graph_category network\n";
 	print "graph_info This graph shows errors for fibrechannel controllers.\n";
 	print "errs.info Number of errors per second on this interface.\n";
