@@ -1,6 +1,9 @@
 #!@@PERL@@
 #
 # $Log$
+# Revision 1.5  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.4  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -51,7 +54,7 @@ if ( $ARGV[0] and $ARGV[0] eq "config" )
     print "host_name $ENV{FQDN}\n";
     print "graph_title SpamAssassin throughput\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel mails/${graph_period}\n";
+    print "graph_vlabel mails/\${graph_period}\n";
     print "graph_order ham spam\n";
     print "ham.label ham\n";
     print "ham.type DERIVE\n";
