@@ -32,6 +32,9 @@
 # 	autoconf  (optional - only used by munin-config)
 #
 # $Log$
+# Revision 1.8  2004/12/10 18:51:43  jimmyo
+# linux/apt* has been forced to LANG=C, to get predictable output.
+#
 # Revision 1.7  2004/12/10 10:47:47  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -166,7 +169,7 @@ sub query_squid {
 if($ARGV[0] and $ARGV[0] eq "config") {
     print "graph_title Squid client requests\n";
     print "graph_args --base 1000 -l 0\n";
-    print "graph_vlabel requests / ${graph_period}\n";
+    print "graph_vlabel requests / \${graph_period}\n";
     print "graph_order hits errors requests\n";
     print "graph_total total\n";
     print "graph_scale no\n";
