@@ -3,6 +3,7 @@ munin (work)
   * Plugin: Added plugin generic/dhcpd3, created by Rune N. Skillingstad.
   * Plugin: Patch generic/bind9 to report "unnamed" as "other" (Nicolas 
     Stransky).
+  * Plugin: linux/apt* has been forced to LANG=C, to get predictable output.
 
 munin (1.1.8)
 
